fix large motto showing up on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,4 +408,8 @@ input[type=reset] {
     .intro-image {
         padding: 0% 0%;
     }
+
+    .large-motto {
+        display: none;
+    }
 }
